# resume-xyz

./: .dockerignore  .editorconfig  .gitignore  .tool-versions  Dockerfile.node  Dockerfile.python  Makefile  pyproject.toml  resume.json
application_manager/: Makefile
application_manager/accounts/: admin.py  forms.py  managers.py  models.py
application_manager/accounts/migrations/: 0001_initial.py
application_manager/application_manager/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
application_manager/application_manager/supporting_documents/: 1st_interview_questions.md  backend_skills.md  bvs.md  database_skills.md  frontend_skills.md  infrastructure_skills.md  staffbase.md
application_manager/application_manager/templates/: breakout.md  csl.md  job_blurb.md  job_name.md  payload.html  resume_header.md  skills_list.md
application_manager/job_applications/: admin.py  models.py  services.py  tasks.py
application_manager/job_applications/migrations/: 0001_initial.py  0002_alter_application_title.py  0003_alter_applicationstatus_name.py  0004_prompt.py  0005_prompt_document_path.py  0006_rename_document_path_prompt_name.py  0007_prompt_response.py  0008_alter_prompt_application.py  0009_application_company.py  (+20 more)
cf-redirect-worker/: Makefile  package.json  pnpm-lock.yaml  worker-configuration.d.ts  wrangler.jsonc
cf-redirect-worker/db/: migration_1.sql
cf-redirect-worker/src/: index.ts
scraper/: Makefile  package.json  pnpm-lock.yaml
scraper/src/: getJobInfo.mjs  getSearchResults.mjs
tools/compose/: development.yml  local.yml
(+27 files in other folders)
